crates/test-files/fixtures/compile_errors/trait_conflicting_impls.fe
trait Foo {}

struct Bar {
}

impl Foo for Bar {}
impl Foo for Bar {}